--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
   <meta name="description" content="sdust 计科 18-1">
 <meta property="og:type" content="website">
-<meta property="og:title" content="韩晨晨的博客">
+<meta property="og:title" content="袁康裕的博客">
 <meta property="og:url" content="http://example.com/index.html">
-<meta property="og:site_name" content="韩晨晨的博客">
+<meta property="og:site_name" content="袁康裕的博客">
 <meta property="og:description" content="sdust 计科 18-1">
 <meta property="og:locale" content="zh_CN">
 <meta property="article:author" content="John Doe">
