--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   };
 </script>
 
-  <title>韩晨晨的博客</title>
+  <title>袁康裕的博客</title>
   
 
 
@@ -94,7 +94,7 @@
 
     <a href="/" class="brand" rel="start">
       <span class="logo-line-before"><i></i></span>
-      <h1 class="site-title">韩晨晨的博客</h1>
+      <h1 class="site-title">袁康裕的博客</h1>
       <span class="logo-line-after"><i></i></span>
     </a>
   </div>
